--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
-  background-color: black;
+  background-color: #050613;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,6 +30,7 @@ body {
   place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  background-color: #050613;
 }
 
 h1 {
