--- a/src/components/testimonialCard/style.sass
+++ b/src/components/testimonialCard/style.sass
@@ -23,6 +23,7 @@
         text-align: justify
         margin-bottom: 35px
         flex: 1
+        color: #fff
     &__member
         display: flex
         gap: 10px
