--- a/src/sections/Features/style.sass
+++ b/src/sections/Features/style.sass
@@ -24,6 +24,7 @@
         font-weight: 700
         margin:0
         text-transform: capitalize
+        color: #fff
     &__text
         font-size: 16px
         font-weight: 400
