--- a/src/sections/Footer/style.sass
+++ b/src/sections/Footer/style.sass
@@ -20,6 +20,7 @@
         padding: 0px
         margin: 0px
         margin-bottom: 30px
+        color: #fff
     & ul 
         margin: 0
         padding: 0
