--- a/src/components/courseCard/style.sass
+++ b/src/components/courseCard/style.sass
@@ -22,6 +22,7 @@
         font-size: 24px
         font-weight: 700
         margin: 0
+        color: #fff
     &__text
         font-size: 16px
         font-weight: 400
